# glyphslib-rs

./: Cargo.toml
glyphslib/: Cargo.toml  README.md
glyphslib/resources/: An-Italic.glyphs  MultiplePanose.glyphs  VersionMajorMinor.glyphs  fuzz.glyphs
glyphslib/src/: common.rs  error.rs  glyphs2.rs  glyphs3.rs  lib.rs  serde.rs  traits.rs  upgrade.rs  utils.rs
glyphslib/src/glyphs2/: curlybraceserde.rs
openstep-plist/: Cargo.toml  README.md
openstep-plist/src/: de.rs  error.rs  lib.rs  ser.rs
