[package]
name = "glyphslib"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
glob = "0.3.0"
pretty_assertions = "1.4.1"
rstest = "0.24.0"

[dependencies]
openstep-plist = { path = "../openstep-plist" }
serde = "1.0"
serde_path_to_error = "0.1"
serde_with = "3.11"
itertools = { workspace = true }
