[package]
name = "openstep-plist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
smol_str = { version = "0.3", features = ["serde"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bigfile"
harness = false
