[package]
name = "openstep-plist"
version = "1.0.0"
edition = "2021"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/simoncozens/glyphslib-rs"
description = "Parser and serializer for OpenStep Property List format"
homepage = "https://github.com/simoncozens/glyphslib-rs"
documentation = "https://docs.rs/openstep-plist"
keywords = ["plist", "openstep", "parser", "serialization", "glyphs"]
categories = ["parsing", "encoding"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
itertools = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
smol_str = { version = "0.3", features = ["serde"] }
serde_bytes = "0.11.17"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bigfile"
harness = false
